2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Remove the tempdir used in Metrics when the extension is aborted.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/ExtensionsManager.py:

	Raise InvalidExtension only when a ExtensionUnknownError has been
	raised.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Fix incremental stuff in Metrics extension and update the contents
	of the table for the metrics that failed on previous executions.
	
2009-03-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/DBTempLog.py:
	* pycvsanaly2/utils.py:

	Add support to load/save DBContentHandler caches from/to a disk
	cache. Implement incremental approach in DBContentHandler.
	
2009-03-17  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBTempLog.py:

	Initialize _need_clear before creating the temp table.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:
	* pycvsanaly2/extensions/Metrics.py:

	Update Command from misc and do not use run_sync() in Metrics
	since it's now deprecated. 
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use RepositoryHandler exceptions instead of Command exceptions
	when running commands through RepositoryHandler.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/__init__.py:

	Fix a typo.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/ExtensionsManager.py:
	* pycvsanaly2/extensions/__init__.py:

	Do not use Exception message attribute since it has been
	deprecated as of python 2.6.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Update documentation
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Instead of skipping files when something fails, we now store it in